Closed Bug 529105 Opened 16 years ago Closed 16 years ago

ASSERTION: Destroying non-empty block list in nsMediaCacheStream::BlockList::~BlockList

Categories

(Core :: Audio/Video, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
status1.9.2 --- beta4-fixed

People

(Reporter: roc, Assigned: roc)

References

Details

Attachments

(1 file)

We saw this in a test run of test_mozLoadFrom.html. It leads to all sorts of badness. The problem is that when when streams are sharing a resource, and you close one of the streams, a block can arrive for the resource and be added to the stream after it's closed. This corrupts media cache state.
Assignee: nobody → roc
Flags: blocking1.9.2+
Attached patch fix — — Splinter Review
Don't iterate through closed streams when searching from streams that are sharing a given resource ID.
Attachment #412754 - Flags: review?(chris.double)
Attachment #412754 - Flags: review?(chris.double) → review+
Whiteboard: [need landing]
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Whiteboard: [need landing] → [need 192 landing]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: