Bug 529105. Don't mess with closed streams when data arrives for a resource that the closed stream is using. r=doublec